# apis-core-biographien

./: .gitignore  .gitmodules  Dockerfile  pyproject.toml  start.sh  theme
.github/workflows/: build.yml
apis/: urls.py
apis/settings/: base.py  biographien.py
infos/: urls.py
webpage/: urls.py
