[tool.poetry]
name = "apis-devops"
version = "0.1.0"
description = "Generic APIS project for auto devops"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.11.2, <3.12"
whitenoise = "^6.3.0"
sentry-sdk = "*"
dj-database-url = "^1.2.0"
gunicorn = "^20.1.0"
acdh-django-charts = "^0.5.3"
django-allow-cidr = "^0.6.0"
mysqlclient = "^2.1.1"
django-extensions = "^3.2.1"
django-csp = "^3.7"
#viecpro-vis = "^0.1.10"
pyzotero = "^1.5.5"
apis-core = { path = "apis-core", develop = true }
pysolr = "^3.9.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.1.0"
pylint = "^2.6.0"
jupyter = "^1.0.0"
jupyter-tabnine = "^1.2.3"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.poetry.group.oebl]
optional = true

[tool.poetry.group.oebl.dependencies]
apis-biographien-theme = { path = "/app/apis-biographien-theme/", develop = false }
apis-highlighter = { git = "https://github.com/acdh-oeaw/apis_highlighter.git", branch = "rh/fix/latest-dependency-versions" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.apis_settings_biographien]
optional = true
dependencies = {'apis-biographien-theme' = { path = "theme" }}
